fix gh-pages base path

--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,6 @@
   <link rel="manifest" href="/manifest.json">
 </head>
 <body>
-  <app-root></app-root>
+  <app-root path="/"></app-root>
 </body>
 </html>
